2008-10-20  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/evil_suite.c:
	* src/bin/evil_suite.h:
	* src/bin/evil_test_memcpy.c:
	* src/bin/evil_test_memcpy.h:
	clean suite and memcpy test code

2008-10-19  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/errno.h:
	* src/lib/evil_errno.c:
	export errno symbol.

	* src/lib/evil_string.c:
	* src/lib/evil_string.h:
	add a (slow) implementation of ffs(). Needed for eina

2008-10-16  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/lib/Makefile.am:
	fix compilation on MinGW. Windows 2000 is
	the minimum version supported by Evil (hence
	other EFL). Goodbye Windows 98.

	* src/bin/evil_test_memcpy.c:
	re-enable small memcpy tests. It seems that memcpy
	provided by glibc and the oem driver on Ipaq
	3970 I have, have the same speed.

2008-10-16  Vincent Torri  <doursse at users dot sf dot net>

	* Makefile.am:
	add the doc subdir

	* src/lib/Makefile.am:
	add evil_fnmatch_private.h in tarballs

2008-10-14  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_fcntl.h:
	don't use it with the cegcc compiler

	* src/lib/evil_fnmatch.c:
	fix warning

	* src/lib/evil_stdlib.c:
	fix putenv and mkstemp with cegcc and mingw32ce

2008-10-11  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/lib/Makefile.am:
	re-add guards suppressed in previous commit

	* src/lib/Evil.h:
	include new header files

	* src/lib/errno.h:
	* src/lib/evil_errno.c:
	add fake errno system with mingw32ce

	* src/lib/evil_fcntl.c:
	* src/lib/evil_fcntl.h:
	fix compilation on cegcc and mingw32 (mainly does
	nothing on Windows CE)

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	add rewind and perror for mingw32ce

	* src/lib/evil_string.c:
	* src/lib/evil_string.h:
	add strerror for mingw32ce

2008-10-11  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/lib/Makefile.am:
	* src/lib/evil_fnmatch.c:
	* src/lib/evil_fnmatch_list_of_states.c: